ФЗ 6, обновлены методы add и delete для классов Task, Epic, SubTask, создана HashMap для хранения истории и удалении дубликатов, выполнено доп задание